[package]
name = "koblas"
version = "0.1.0"
edition = "2021"
description = "Lightweight SOCKS5 proxy server"
readme = "README.md"
repository = "https://github.com/ynuwenhof/koblas"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "socks", "server"]

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
toml = "0.5.9"
tracing = "0.1.37"
tracing-error = "0.2.0"

[dependencies.argon2]
version = "0.4.1"
features = ["std"]

[dependencies.clap]
version = "4.0.6"
features = ["derive"]

[dependencies.rand_core]
version = "0.6.4"
features = ["std"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.tokio]
version = "1.21.1"
features = ["fs", "net", "io-util", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]
