[package]
name = "koblas"
version = "0.1.1"
edition = "2021"
description = "Lightweight SOCKS5 proxy server"
readme = "README.md"
homepage = "https://github.com/ynuwenhof/koblas"
repository = "https://github.com/ynuwenhof/koblas"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "socks", "server"]

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
toml = "0.7.3"
tracing = "0.1.37"
tracing-error = "0.2.0"

[dependencies.argon2]
version = "0.5.0"
features = ["std"]

[dependencies.clap]
version = "4.2.1"
features = ["derive", "env"]

[dependencies.rand_core]
version = "0.6.4"
features = ["std"]

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.tokio]
version = "1.27.0"
features = ["fs", "net", "io-util", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]
