[package]
name = "koblas"
version = "0.1.5"
edition = "2021"
description = "Lightweight SOCKS5 proxy server"
readme = "README.md"
homepage = "https://github.com/ynuwenhof/koblas"
repository = "https://github.com/ynuwenhof/koblas"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "socks", "server"]

[dependencies]
color-eyre = "0.6.2"
itertools = "0.11.0"
toml = "0.8.2"
tracing = "0.1.40"
tracing-error = "0.2.0"

[dependencies.argon2]
version = "0.5.2"
features = ["std"]

[dependencies.clap]
version = "4.4.6"
features = ["derive", "env"]

[dependencies.rand_core]
version = "0.6.4"
features = ["std"]

[dependencies.serde]
version = "1.0.189"
features = ["derive"]

[dependencies.tokio]
version = "1.33.0"
features = ["fs", "net", "io-util", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
